Add overtime information and configuration #45
